fix overflow message with codeblock

--- a/frontend/src/app/components/channel/chat/chat.component.scss
+++ b/frontend/src/app/components/channel/chat/chat.component.scss
@@ -2,8 +2,6 @@ nb-list-item {
   border-bottom: 0 !important;
   padding: 0 !important;
   margin-bottom: 25px;
-  max-width: 95%;
-  overflow-x: auto;
 }
 
 .loading-indicator {
